# OpenGL_Space-shooter

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
project/: CMakeLists.txt
project/shaders/: fragment.glsl  vertex.glsl
project/src/: Shader.h  UI.h  main.cpp
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
